fix: load more commits

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="manifest" href="https://marjoballabani.github.io/github-crawl-demo/manifest.json">
     <link rel="shortcut icon" href="https://marjoballabani.github.io/github-crawl-demo/favicon.ico">
     <title>React App</title>
-    <link href="https://marjoballabani.github.io/github-crawl-demo/static/css/main.99a9174e.css" rel="stylesheet">
+    <link href="https://marjoballabani.github.io/github-crawl-demo/static/css/main.69a4e5be.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="container-fluid"></div>
-    <script type="text/javascript" src="https://marjoballabani.github.io/github-crawl-demo/static/js/main.def267ab.js"></script>
+    <script type="text/javascript" src="https://marjoballabani.github.io/github-crawl-demo/static/js/main.7dcceb26.js"></script>
 </body>
 
 </html>
